force-app/main/default/objects/Kb__c/Kb__c.object-meta.xml
<CustomObject>
    <description>A set of knowledge gathered across the organization.</description>
    <label>KBase</label>
    <nameField>
        <displayFormat>KB-{000000}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KBase</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>