force-app/main/default/objects/Kb__c/fields/KOut__c.field-meta.xml
<CustomField>
    <fullName>KOut__c</fullName>
    <label>Generated Knowledge</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>