force-app/main/default/objects/Kb__c/fields/LessonLearned__c.field-meta.xml
<CustomField>
    <fullName>LessonLearned__c</fullName>
    <label>Lesson Learned</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>