force-app/main/default/objects/Kb__c/fields/MinutesId__c.field-meta.xml
<CustomField>
    <fullName>MinutesId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Minutes of Meeting</label>
    <referenceTo>Minutes__c</referenceTo>
    <relationshipLabel>Knowledge Base</relationshipLabel>
    <relationshipName>MinutesKB</relationshipName>
    <type>Lookup</type>
</CustomField>