force-app/main/default/objects/Kb__c/fields/SubjectDescription__c.field-meta.xml
<CustomField>
    <fullName>SubjectDescription__c</fullName>
    <label>Subject Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>