force-app/main/default/objects/Kb__c/fields/SubjectId__c.field-meta.xml
<CustomField>
    <fullName>SubjectId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subject Id</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipLabel>Knowledge Base</relationshipLabel>
    <relationshipName>SubjectsKB</relationshipName>
    <type>Lookup</type>
</CustomField>