force-app/main/default/objects/Kb__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>SubjectDescription__c</columns>
    <columns>LessonLearned__c</columns>
    <columns>MinutesId__c</columns>
    <columns>KeyWords__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>